--- a/index.ipynb
+++ b/index.ipynb
@@ -232,12 +232,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'www.vandelay.com'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'www.'+'vandelay.com' # 'www.vandelay.com'"
    ]
@@ -264,7 +274,7 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 728"
+    "x =\"7285553334\" # 728"
    ]
   },
   {
