Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,8 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n"
+    "x = \"art.vandelay@vandelay.co\" # False\n",
+    "if x"
    ]
   },
   {
